# data-agent

./: .env.example  .gitignore  README.md  agents.py  app.py  data_source_manager.py  data_sources.yaml  db.py  docker-compose.yml  instrument.py  mock-api.py  mock_json_local_file.json  mydatabase.db  pyproject.toml  setup.py
data_agent/: agent.py  data_source_manager.py  db.py  test.txt  tools.py
data_agent/sub_agents/query_agent/: agent.py  tools.py
flows/: test.py  test_flow.py
scripts/: populate_db.py  populate_sqllight_db.py
sql/: schema.sql
