[project]
name = "nltsql"
version = "0.1.0"
dependencies = [
    "python-dotenv", 
    "psycopg2-binary", 
    "pydantic-ai[logfire]",
    "chainlit",
    "fastapi",
    "uvicorn",
    "requests",
    "prefect"
]

[tool.setuptools]
py-modules = ["agents", "app", "db", "instrument"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
